# webscrapping_project

./: Dockerfile  Notes  README.md  main.py  pyproject.toml
data/: .~lock.products.xlsx#  products.xlsx
src/: atc_request.py  gather_all.py  get_my_ip.py  logging.py  ml_search.py  product_reader.py
tests/: test_atc_request.py  test_product_reader.py
