[tool.poetry]
name = "6-scrapping"
version = "0.1.0"
description = ""
authors = ["lksprado <lks-prado@live.com>"]
readme = "README.md"
packages = [{include = "6"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
